fix(gux-content-search): design fixes
fix(gux-content-search): fixed test snapshot

fix(gux-content-search): no focus ring anymore on input field within component

fix(gux-content-search): remove hover border for disabled state

fix(gux-content-search): comments

fix(gux-content-search): removed hardcoded width and added color token

fix(gux-content-search): using gux-truncate

fix(gux-content-search): fixed tests

chore(gux-content-search): ellipsis fix

chore(gux-content-search): pR feedback

chore(gux-content-search): readme file changes

--- a/packages/genesys-spark-components/src/components/stable/gux-content-search/gux-content-search.scss
+++ b/packages/genesys-spark-components/src/components/stable/gux-content-search/gux-content-search.scss
@@ -7,11 +7,14 @@
   min-width: 300px;
 }
 
+::slotted(input[disabled]) {
+  opacity: var(--gse-ui-formControl-input-disabled-opacity);
+}
+
 ::slotted(input) {
   box-sizing: border-box;
   flex-basis: 100%;
   flex-shrink: 1;
-  width: 100%;
   font-family: var(--gse-ui-search-counter-text-fontFamily);
   font-size: var(--gse-ui-search-counter-text-fontSize);
   font-weight: var(--gse-ui-search-counter-text-fontWeight);
@@ -20,9 +23,14 @@
   border: 0;
   border-radius: 0;
   outline: none;
+  color: var(--gse-ui-formControl-input-populatedColor);
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  width: 120px;
 
   &::placeholder {
-    color: var(--gse-ui-formControl-input-placeholderColor);
+    color: var(--gse-ui-formControl-input-populatedColor);
   }
 
   &.gux-focused,
@@ -49,6 +57,11 @@
     var(--gse-ui-formControl-input-default-border-color);
   border-radius: var(--gse-ui-formControl-input-borderRadius);
 
+  gux-truncate {
+    align-items: center;
+    display: flex;
+  }
+
   &.gux-disabled {
     pointer-events: none;
     cursor: default;
@@ -66,7 +79,7 @@
       var(--gse-ui-formControl-input-focus-border-color);
   }
 
-  &:not(:disabled):hover {
+  &:not(:disabled):not(.gux-disabled):hover {
     border: var(--gse-ui-formControl-input-hover-border-width)
       var(--gse-ui-formControl-input-hover-border-style)
       var(--gse-ui-formControl-input-hover-border-color);
@@ -156,11 +169,11 @@
       gap: var(--gse-ui-search-counter-gap);
 
       .gux-navigation-divider {
-        width: 1px; // TODO COMUI-2310 - missing token for divider width.
         height: 16px; // TODO COMUI-2310 - missing token for divider height
         background-color: #c6c8ce; // TODO COMUI-2310 - missing token for divider background color.
         border: 1px var(--gse-ui-search-counter-divider-border-style)
           var(--gse-ui-search-counter-divider-border-color);
+        color: var(--gse-ui-search-counter-default-foregroundColor);
       }
 
       .gux-navigation-buttons {
@@ -171,6 +184,7 @@
       .gux-navigation-result {
         align-items: center;
         white-space: nowrap;
+        color: var(--gse-ui-search-counter-default-foregroundColor);
       }
 
       .gux-previous-button {
